--- a/src/main/resources/com/example/dialogScene.fxml
+++ b/src/main/resources/com/example/dialogScene.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
-
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="281.0" prefWidth="349.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.DialogController">
    <children>
-      <Button layoutX="135.0" layoutY="43.0" mnemonicParsing="false" onAction="#onClickCloseButton" text="Bezár" />
+      <Button layoutX="281.0" layoutY="20.0" mnemonicParsing="false" onAction="#onClickCloseButton" text="Mentés" />
+      <Label layoutX="35.0" layoutY="103.0" text="Rendszám" />
+      <TextField fx:id="plateField" layoutX="120.0" layoutY="99.0" />
    </children>
 </Pane>
