--- a/src/main/resources/com/example/mainScene.fxml
+++ b/src/main/resources/com/example/mainScene.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.Pane?>
-
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.MainController">
    <children>
-      <Button layoutX="179.0" layoutY="222.0" mnemonicParsing="false" onAction="#onClickShowButton" text="Mutat" />
+      <Button layoutX="32.0" layoutY="28.0" mnemonicParsing="false" onAction="#onClickAddButton" text="Hozzáad" />
+      <ListView fx:id="carList" layoutX="111.0" layoutY="85.0" prefHeight="272.0" prefWidth="376.0" />
    </children>
 </Pane>
